syntax = "proto3";

package tolar.proto;

import "tolar/proto/storage.proto";
import "tolar/proto/transaction.proto";

service BlockchainService {
    rpc GetBlockCount(GetBlockCountRequest) returns (GetBlockCountResponse);
    rpc GetBlockByHash(GetBlockByHashRequest) returns (GetBlockResponse);
    rpc GetBlockByIndex(GetBlockByIndexRequest) returns (GetBlockResponse);
    rpc GetPaginatedBlocksByIndex(GetPaginatedBlocksByIndexRequest) returns (GetPaginatedBlocksResponse);
    rpc GetCompleteBlockByIndex (GetBlockByIndexRequest) returns (GetCompleteBlockByIndexResponse);
    rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse);
    rpc GetTransactionReceipt(GetTransactionReceiptRequest) returns (GetTransactionReceiptResponse);
    rpc GetBlockchainInfo(GetBlockchainInfoRequest) returns (GetBlockchainInfoResponse);
    rpc GetTransactionList(GetTransactionListRequest) returns (GetTransactionListResponse);
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
    rpc GetLatestBalance(GetBalanceRequest) returns (GetBalanceResponse);
    rpc GetNonce(GetNonceRequest) returns (GetNonceResponse);
    rpc TryCallTransaction(tx.Transaction) returns (TryCallTransactionResponse);
    rpc GetGasEstimate(tx.Transaction) returns (GetGasEstimateResponse);
}

message GetBlockCountRequest {
}

message GetBlockCountResponse {
    uint64 block_count = 1;
}

message GetBlockByHashRequest {
    bytes block_hash = 1;
}

message GetBlockByIndexRequest {
    uint64 block_index = 1;
}

message GetBlockResponse {
    uint64 block_index = 1;
    bytes hash = 2;
    bytes previous_block_hash = 3;
    repeated bytes transaction_hashes = 4;
    uint64 confirmation_timestamp = 5;
}

message GetPaginatedBlocksByIndexRequest {
    uint64 starting_block_index = 1;
    uint64 number_of_blocks = 2;
}

message GetPaginatedBlocksResponse {
    repeated storage.Block blocks = 1;
}

message GetCompleteBlockByIndexResponse {
    storage.ValidBlock valid_block = 1;
    storage.Block block = 2;
}

message GetTransactionRequest {
    bytes transaction_hash = 1;
}

message GetTransactionResponse {
    bytes block_hash = 1;
    uint64 transaction_index = 2;
    bytes sender_address = 3;
    bytes receiver_address = 4;
    bytes value = 5;
    bytes gas = 6;
    bytes gas_price = 7;
    string data = 8;
    bytes nonce = 9;
    uint64 confirmation_timestamp = 10;
    bytes gas_used = 11;
    bytes gas_refunded = 12;
    bytes new_address = 13;
    string output = 14;
    bool excepted = 15;
}

message GetBlockchainInfoRequest {
}

message GetBlockchainInfoResponse {
    uint64 confirmed_blocks_count = 1;
    uint64 total_blocks_count = 2;
    bytes last_confimed_block_hash = 3;
}

message GetTransactionReceiptRequest {
    bytes transaction_hash = 1;
}

message GetTransactionReceiptResponse {
    bool excepted = 1;
    bytes block_hash = 2;
    uint64 block_index = 3;
    bytes transaction_hash = 4;
    uint64 transaction_index = 5;
    bytes sender_address = 6;
    bytes receiver_address = 7;
    bytes new_address = 8;
    bytes gas_used = 9;
    repeated tx.LogEntry logs = 10;
}

message GetTransactionListRequest {
    repeated bytes addresses = 1;
    uint64 limit = 2;
    uint64 skip = 3;
}

message GetTransactionListResponse {
    repeated GetTransactionResponse transactions = 1;
}

message GetBalanceRequest {
    bytes address = 1;
    uint64 block_index = 2;
}

message GetBalanceResponse {
    bytes balance = 1;
    uint64 block_index = 2;
}

message GetNonceRequest {
    bytes address = 1;
}

message GetNonceResponse {
    bytes nonce = 1;
}

message TryCallTransactionResponse {
    string output = 1;
    bool excepted = 2;
}

message GetGasEstimateResponse {
    uint64 gas_estimate = 1;
}

